Added dependencies to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ quarkus.oidc.token.audience=${AUTH0_AUDIENCE}
 quarkus.oidc.application-type=service
 quarkus.oidc.authentication.user-info-required=false
 quarkus.oidc.token.principal-claim=sub
+
+# Rate Limiting Configuration
+quarkus.http.filter.rate-limit.enabled=true
