adjusted properties to fit with Auth0 api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,10 @@ quarkus.datasource.jdbc.acquisition-timeout=3
 quarkus.datasource.jdbc.idle-removal-interval=15
 quarkus.datasource.jdbc.leak-detection-interval=60
 
-# Auth0 OIDC Configuration (Stateless Service)
-quarkus.oidc.provider=${AUTH0_DOMAIN}
-quarkus.oidc.client-id=${AUTH0_CLIENT_ID}
-quarkus.oidc.credentials.secret=${AUTH0_CLIENT_SECRET}
+# Auth0 OIDC Configuration (API - JWT Validation)
+quarkus.oidc.auth-server-url=${AUTH0_DOMAIN}
 quarkus.oidc.token.audience=${AUTH0_AUDIENCE}
 quarkus.oidc.application-type=service
-quarkus.oidc.authentication.user-info-required=false
 quarkus.oidc.token.principal-claim=sub
 
 # Rate Limiting Configuration
